# mt-cli

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  README.md  TODO.md  debug.sh  release.sh  run_debug.sh  run_release.sh
MetaTrader/mt5/: Cargo.toml
MetaTrader/mt5/src/: account.rs  indicator.rs  instant_rates.rs  lib.rs  mt5_bridge.rs  order.rs  sockets.rs  symbol.rs  tick.rs  trade.rs
MetaTrader/mt5/utils/ExpertAdvisors/testes/: action.mqh  message.mqh  structs.mqh  testes.ex5  testes.mqproj
algo/: Cargo.toml  test_algorithm.rs
cli/: Cargo.toml
cli/src/: cli_args.rs  lib.rs
data_parser/: Cargo.toml
data_parser/src/: data_types.rs  lib.rs
data_parser/test_data/: current_trades.json
gui/: package-lock.json  package.json
gui/src/: App.svelte  actions.js  index.html  main.js  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/lib/: Account.svelte  Greet.svelte  Order.svelte  (+1 more)
mt5/: Cargo.toml
mt5/src/: account.rs  calc.rs  error.rs  indicator.rs  instant_rates.rs  lib.rs  mt5_bridge.rs  ohlc.rs  open_trade.rs  order.rs  parse.rs  sockets.rs  symbol.rs  tick.rs  timeframe.rs  trade.rs
mt5/utils/ExpertAdvisors/testes/: operation.mqh  testes.mq5  trade.mqh
personal_strategy/: Cargo.toml
src/: cli.rs  cli_args.rs  indicator.rs  main.rs  mt5_bridge.rs  sockets.rs  test_algorithm.rs  tick.rs
src/account/: mod.rs
src/cli_args/: mod.rs
src/indicator/: mod.rs
src/parse_data/: mod.rs
src/sockets/: mod.rs
src/test_algorithm/: mod.rs
src/tick/: mod.rs
testes/: constant.mqh  message.mqh  testes.ex5
