[package]
name = "trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chrono = "0.4.26"
clap ={ version =  "4.3.19", features = ["derive"] }
serde_json = "1.0.103"
zmq = "0.10.0"
mt5 = {path = "mt5"}
