[package]
name = "mt5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.115"
serde = { version = "1.0.174", features = ["derive"] }
zmq = "0.10.0"
chrono ={version="0.4.38", features = ["serde"]}
strum_macros = "0.26.4"
strum = { version = "0.26.2", features = ["derive"] }
